# OpenCV_Facial_Recognition_With_Haar_Cascade

./: CMakeLists.txt  facerec.cpp
assets/: noFacesFound.pgm
att_faces/s41/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
